Image, border-box

--- a/TESTS/cdome.html
+++ b/TESTS/cdome.html
@@ -10,7 +10,7 @@
 
 <h1>Carter Dome</h1>
 
-<img src="images/Carter-Dome.jpg" height="600" width="800" alt="A picture of Carter Dome">
+<img id="mountain" alt="A good view of Crter Dome" src="images/Carter-Dome.jpeg"  alt="A picture of Carter Dome">
 
 <p>See <a href="#stats">statistics</a> or find <a href="#additional">additional reading</a> on Carter Dome.</p>
 
