--- a/TESTS/ex1.html
+++ b/TESTS/ex1.html
@@ -10,15 +10,29 @@
 	</head>
 
 	<body>
-		<p class="red-text"> Ёбаный сапог</p>
-		<p id="top-ad"> SUMMER SALE ON NOW!</p>
+		<p class="red-text"> Cusutuputu!</p>
+		<p id="inner-header"> SUMMER SALE ON NOW!</p>
 		<p> We Have the <span class="bold-text" id="top-ad">best</span> widgets money can buy.</p>
-		<p id="top-ad"> Да ну нахуй</p>
+		<div id="top-ad">
+			<div id="inner-header">
+				Don't miss this sale!
+			</div>
+		There was the rude phrase!
+		</div>
+		<p class="shadow"> There is shadow effect of text</p>
+															
+		<p class="shadow1"> There is shadow effect of text without blur</p>
+															
+		<p id="inner-header"> There was the rude surprise</p>
+		<a class="royal_blue"> Royal blue</a>
+		<a class="greystar"> Grey Star</a>
 		<a href="https://www.ClydeBankMedia.com/">ClydeBankMedia</a>
 		<a href="https://www.google.com/">Google</a>
 		<a href="https://www.yahoo.com/">Yahoo</a>
 		<article>
 			<p> Those interested in learning about HTML and CSS should consult the ClydeBank Media HTML and Css QuickStart Guide. It is a fantactic resource.</p>
+			<a class="larger-spacing">This header has an extra 2px between its letters</a><br>
+			<a> This header has a normal px between its letter</a>
 			<h2> A Super Interesting Article</h2>
 
 			
