Positions of elements

--- a/TESTS/ex1.html
+++ b/TESTS/ex1.html
@@ -10,6 +10,13 @@
 	</head>
 
 	<body>
+		<!		<div class="fixed" > Fixed PIZDOTA</div>>
+		<div class="the-parent"> This is the parent (ancestor) element, called the-parent, which is set to relative.
+			<div class="the-child">
+				This child element, called the-child, is set to absolute. Its properties will be in relationship to the parent element</div>
+		</div>
+		<div class="fixed" > Fixed PIZDOTA</div>
+
 		<p class="red-text"> Cusutuputu!</p>
 		<p id="inner-header"> SUMMER SALE ON NOW!</p>
 		<p> We Have the <span class="bold-text" id="top-ad">best</span> widgets money can buy.</p>
@@ -47,6 +54,23 @@
 		<h3> This is first sentence test text</h3>
 		<h3> This is second h3 text</h3>
 		<h2> Test of selection</h2>
+		<div>
+			I have a hard time relating to this div.
+		</div>
+		<div class="relative-position">
+			I can relate to this div.
+		</div>
+		<div class="sidebar">
+			<p> Excerpt from: A Floating Home by Cyril Ionides & J.B. Atkins</p>
+		</div>
+		<div class="main-text">
+			<h1> A Floating Home</h1>
+			<p> One winter I made up my mind that it was necessary to live in some sort of vessel afloat instead of in a hous on the land.This decision was th result, at last pressed on me by circumstances, of vague dreams which had held my imagination for many years. </p>
+			<p> These dreams were not,I belive, peculiar to myself. The child, young or old, whose fancy is captive to water, builds fo castles in Spain houseboats wherein he may spend his life floating in his element. His fancy at some time or other has played with ht thought of possessing almost every type of craft for his home - a three- decker with a glirious gallery, a Thames houseboat all ready to step into, a disused schooner, a bluff-bowed old brig. He will moor her in some delectable water, and when his restlessness falls upon him he will have her removed to another place.Civilization shall never rule him. As though to prove it he will live free of rates, and weigh his anchor and move on if th matter should ever happen to come under dispute. Nor will he pay rent resentfully to a grasping landlord. For a mere song he will pickup the old vessel that shall contain his happiness. Her walls will be stout enough to shelter him fo a lifetime, thogh Lloyd's agent may have condemned her, according to th exacting tests that take count of sailors' lives, as unfit to sail the deep seas.</p>
+		</div>
+		<div class="carter">
+			<img src="images/Carter-Dome.jpeg" id="carter-pic" alt="Carter Dome" height="120" width="160">
+			This is a picture of Carter Dome.</div>
 	</body>
 
 	<footer>
