Add banner about sales

--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
+	<div class="promotion"> Free delivery on all orders over $15</div>
 <header>
-    <div class="container">
+   <div class="container">
+ 
         <div class="title-header">
+
             <div class="logo">
                 <a href="index.html">
                     <img src="images/logo.png" alt="Logo">
