--- a/TESTS/ex1.html
+++ b/TESTS/ex1.html
@@ -10,7 +10,7 @@
 	</head>
 
 	<body>
-		<!		<div class="fixed" > Fixed PIZDOTA</div>>
+		<!		<div class="fixed" > Fixed PIZDOTA</div>
 		<div class="the-parent"> This is the parent (ancestor) element, called the-parent, which is set to relative.
 			<div class="the-child">
 				This child element, called the-child, is set to absolute. Its properties will be in relationship to the parent element</div>
@@ -71,6 +71,17 @@
 		<div class="carter">
 			<img src="images/Carter-Dome.jpeg" id="carter-pic" alt="Carter Dome" height="120" width="160">
 			This is a picture of Carter Dome.</div>
+		<div class="grid">
+			<div class="box">
+				<p>Box 1</p>
+			</div>
+			<div class="box">
+				<p>Box 2</p>
+			</div>
+			<div class="box">
+				<p>Box 3</p>
+			</div>
+		</div>
 	</body>
 
 	<footer>
