--- a/TESTS/ex1.html
+++ b/TESTS/ex1.html
@@ -10,7 +10,13 @@
 	</head>
 
 	<body>
-		<!		<div class="fixed" > Fixed PIZDOTA</div>
+		<ul class="main-nav">
+			<li><a href="/">Home</a></li>
+			<li><a href="about.html">About</a></li>
+			<li><a href="learn.html">Learn More</a></li>
+			<li><a href="contact.html">Contact</a></li>
+		</ul>
+
 		<div class="the-parent"> This is the parent (ancestor) element, called the-parent, which is set to relative.
 			<div class="the-child">
 				This child element, called the-child, is set to absolute. Its properties will be in relationship to the parent element</div>
@@ -82,8 +88,37 @@
 				<p>Box 3</p>
 			</div>
 		</div>
-	</body>
-
+		<div>
+			This is come text.
+			<p class="inline-paragraph">This is a paragraph.</p>
+			And here is some more text</div>
+		<div>
+			This is come text.
+			<p class="block-paragraph">This is a paragraph.</p>
+			And here is some more text</div>
+		<div>
+			This is some text.
+			<p class="inline-text"> This is a paragraph.<br> It has a line break, but is still part of this block</p>
+			And here is some more text
+		</div>
+			</body>
+			<div class="flex-container">
+				<div>1</div>
+				<div>2</div>
+				<div>3</div>
+				<div>4</div>
+				<div>5</div>
+			        <div>1</div>
+				<div>2</div>
+				<div>3</div>
+				<div>4</div>
+				<div>5</div>	
+				<div>1</div>
+				<div>2</div>
+				<div>3</div>
+				<div>4</div>
+				<div>5</div>
+			</div>
 	<footer>
 	</footer>
 	
