--- a/TESTS/ex1.html
+++ b/TESTS/ex1.html
@@ -118,7 +118,29 @@
 				<div>3</div>
 				<div>4</div>
 				<div>5</div>
+				<p> The guick brown jumped over th lazy red dog. The quick brown fox <sup> jumped </sup> over the lazy red dog.The guick brown jumped over th lazy red dog. The quick brown fox jumped over the lazy red dog. The guick brown <sub> jumped over</sub> the lazy red dog. The quick brown fox jumped over the <sup>lazy red</sup> dog.  The guick brown jumped over th <abbr title="Lazy Red Dog">LRD</abbr>. The guick brown jumped over th lazy red dog. The guick brown jumped over th lazy red dog. The guick brown jumped over th lazy red dog.</p> 
+					
 			</div>
+			<p> The guick brown jumped over th lazy red dog. The guick brown jumped over th lazy red dog. The guick brown jumped over th lazy red dog. The guick brown jumped over th lazy red dog.</p>
+				<blockquote cite="Mr.Fox, The Quick Silver Antology, 1999">
+					<p><q> The guick brown jumped over th lazy yellow dog.The guick silver jumped over th lazy yellow dog.The guick silver jumped over th lazy yellow dog.</q></p>
+				</blockquote>
+				<p>The guick brown jumped over th lazy red dog. The guick brown jumped over th lazy red dog. The guick brown jumped over th lazy red dog. The guick brown jumped over th lazy red dog.</p>
+				<cite> Mr.Fox, The Quick Silver Antology, 1999</cite>
+				<pre>
+				This is an example of computer code.</pre>
+				<p> Enter <code> dir</code> on the command line to see a list of files.</p>
+				<p> Would you like a &#127803;?</p>
+				<p> Would you likea <span style="font-size: 50px;">&#127803;</span>?</p>
+				<audio controls>
+					<source src="assets/mp3r-1.mp3" type="audio/mp3">
+				</audio>
+				<div>
+				<video width="640" height="480" controls>
+					<source src="assets/6_Days.mp4" type="video/mp4">
+					<track src="welcome_en.vtt" kind"subtitles" srclang="en" label="English">
+						<track src=6_days.vtt" kind="subtitles" srclang="es" label="Spanish"> Your brouser doesn't support video palyback.</video>
+				</div>
 	<footer>
 	</footer>
 	
