--- a/TESTS/ex1.html
+++ b/TESTS/ex1.html
@@ -101,7 +101,6 @@
 			<p class="inline-text"> This is a paragraph.<br> It has a line break, but is still part of this block</p>
 			And here is some more text
 		</div>
-			</body>
 			<div class="flex-container">
 				<div>1</div>
 				<div>2</div>
@@ -214,8 +213,8 @@
 						<label for="age">Age:</label>
 						<input type="text" id="age" name="age"><br><br>
 					</fieldset>
-					<fieldset>
-						<legend> Comapany Details</legend>
+					<fieldset> 
+						<legend class=lubel> Comapany Details</legend>
 						<label for="company">Company Name:</label>
 						<input type="text" id="company"
 								   name="company"><br><br>
@@ -225,6 +224,16 @@
 				</form>
 
 				<textarea name="message" rows="5" cols="60" maxlength="2000" wrap="hard"></textarea>
+				<br>
+				<input type="text" name="name" placeholder="Please enter your name">
+				<br>
+				<input type="text" name="name" autofocus>
+				<br>	
+				<input type="text" name="username" autocomplete="on">
+				<br>
+				<input type="range" name="pressure" min="0" max="100" step="5">
+				<br>
+			</body>
 	<footer>
 	</footer>
 	
